# es-acc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml  start.sh  vercel.json
api/: Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  services.py
api/src/esacc/: config.py  constants.py  dependencies.py  main.py
api/src/esacc/middleware/: id_masking.py  rate_limit.py  security_headers.py
api/src/esacc/models/: baseline.py  emendas.py  entity.py  graph.py  investigation.py  pattern.py  search.py  user.py
api/src/esacc/queries/: annotation_create.cypher  annotation_delete.cypher  annotation_list.cypher  baseline_region.cypher  baseline_sector.cypher  emendas_contract_types.cypher  emendas_tesouro_count.cypher  emendas_tesouro_list.cypher  entity_by_element_id.cypher  entity_by_id.cypher  entity_connections.cypher  entity_lookup.cypher  entity_score.cypher  entity_score_peers.cypher  entity_timeline.cypher  graph_expand.cypher  health_check.cypher  investigation_add_entity.cypher  investigation_by_token.cypher  investigation_create.cypher  investigation_delete.cypher  investigation_get.cypher  investigation_list.cypher  investigation_remove_entity.cypher  investigation_share.cypher  investigation_share_revoke.cypher  investigation_update.cypher  meta_stats.cypher  (+25 more)
api/tests/: conftest.py
api/tests/integration/: conftest.py  test_entity_integration.py  test_graph_integration.py  test_search_integration.py
api/tests/unit/: test_auth.py  test_auth_service.py  test_baseline.py  test_entity.py  test_entity_timeline.py  test_graph.py  test_health.py  test_id_masking.py  test_intelligence_provider.py  test_investigation.py  test_neo4j_service.py  test_pdf_service.py  test_public_mode.py  test_rate_limit.py  test_score_service.py  test_search.py
etl/: pyproject.toml
etl/src/esacc_etl/: __init__.py  loader.py  runner.py
(+77 files in other folders)
