[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esacc-etl"
version = "0.1.0"
description = "VIGILIA ETL — Pipelines de ingesta de datos públicos españoles"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.20",
    "pandas>=2.2",
    "httpx>=0.27",
    "pydantic>=2.10",
    "click>=8.1",
    "rich>=13.7",
    "lxml>=5.1",
    "beautifulsoup4>=4.12",
]

[project.scripts]
esacc-etl = "esacc_etl.runner:cli"

[tool.setuptools.packages.find]
where = ["src"]
